# polirag

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  project_docs.tex
src/: config.rs  main.rs  ops.rs
src/llm/: mod.rs
src/rag/: embeddings.rs  hnsw_store.rs  mod.rs  store.rs
src/scrapper/: auth.rs  mod.rs  processing.rs
src/tui/: markdown.rs  mod.rs
