[package]
name = "polirag"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
# Web Framework
axum = { version = "0.7.4", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Scraper & HTTP
reqwest = { version = "0.11", features = ["cookies", "json", "multipart", "rustls-tls", "stream"] }
scraper = "0.19.0"
url = "2.5.0"
headless_chrome = "1.0"

# Validations & Utils
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tracing-appender = "0.2.4"
clap = { version = "4.5.55", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.2"
termimad = "0.34.1"
dotenv = "0.15.0"
reqwest_cookie_store = "0.6.0"
cookie_store = "0.20.0"
cookie = "0.18.1"
zip = "0.6.6"
pdf-extract = "0.7.3"
walkdir = "2.4"
ratatui = "0.29.0"
crossterm = "0.27"
dirs = "6.0.0"
futures = "0.3.31"
async-stream = "0.3.6"


# Embeddings
llama-cpp-2 = "0.1.132"
llama-cpp-sys-2 = "0.1.132"
tempfile = "3.10"
text-splitter = "0.29.3"
tui-markdown = "0.3.7"
pulldown-cmark = "0.13.0"
ratatui-core = "0.1.0"
textwrap = "0.16.2"
# hf-hub = "0.3"

[profile.release]
lto = true
opt-level = 3
